
* docutils/utils/smartquotes.py

  - Pre-compile regexps once, not with every call of `educateQuotes()`
    (patch #206 by Chris Sewell); simplify regexps; skip replacement
    rules if there is nothing to replace.

* docutils/writers/html4css1/__init__.py

  - Support video inclusion via `<object>` tags.

* docutils/writers/html5_polyglot/\*.css

  - Embed SVG images as ``<svg>`` instead of data-URI
    (not used by "html4css1"). Fixes [feature-request:#100].
  - Move MathML styles to "minimal.css" (required for correct rendering).

* docutils/writers/_html_base.py

  - Stop setting the "footnote-reference" class value for footnote references.
    Since 0.18, you can use the CSS selector ``[role="doc-noteref"]``.
  - Support reading/embedding images also with "file:" URI.
  - Warn, if image scaling fails because the image file cannot be read.
  - Support video inclusion via `<video>` tags
    (moved here from writers/html5_polyglot/__init__.py).
  - New auxiliary function `HTMLTranslator.uri2imagepath()`
    ensures the image file can also be read when
    CWD and output directory differ.
  - Consider the root-prefix_ setting when converting an image URI
    to a local filesystem path.
  - New <image> attribute "loading" overrides "image-loading" setting.
  - Write system messages for errors/warnings during the writing stage
    (image transformations, math content conversion, ...).

  .. _root-prefix: docs/user/config.html#root-prefix

* docutils/writers/latex2e/__init__.py

  - Fix placement of hyperlink target (label) for tables (bug #440).

* docutils/writers/manpage.py

  - Add preprocessor hinting tbl first line, see bugs #477.
  - Change tbl-Tables using box option, see bugs #475.
  - Apply literal block patch #205. Use ``.EE`` and ``.EX`` macros.
    Thanks to G. Branden Robinson (I assume).

* docutils/writers/odf_odt/__init__.py

  - Use context manager for image reading operations.
    Catch `URLError` when `urllib.request.urlopen()` fails.
