@@ -24,4 +24,4 @@ table-style: colwidths-grid
 writer: html5
 # Prevent tools/buildhtml.py from processing certain text files.
 ignore: GPL2.txt:header.txt:header0.txt:header2.txt:cheatsheet.txt
-prune: .svn:.hg:build:dist:docs/.svn:docutils:docutils.egg-info:licenses:test:tools
+prune: build:dist:docutils:docutils.egg-info:licenses:test:tools
